news unit test
